@@ -17,9 +17,14 @@
 #ifndef _PROFILE_H_
 #define _PROFILE_H_
 
-#define CHARSET_ALPHANUMERIC L"abcdefghijklmnopqrstuvwxyz" \
-			      "ABCDEFGHIJKLMNOPQRSTUVWXYZ" \
-			      "1234567890"
+#define CHARSET_LOWERCASE	L"abcdefghijklmnopqrstuvwxyz"
+#define CHARSET_UPPERCASE	L"ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+#define CHARSET_ALPHA		CHARSET_LOWERCASE CHARSET_UPPERCASE
+#define CHARSET_DIGITS		L"1234567890"
+#define CHARSET_ALPHANUMERIC	CHARSET_ALPHA CHARSET_DIGITS
+#define CHARSET_SYMBOLS		L"~`!@#$%^&*()_+-=[]\\{}|;':\",./<>?"
+#define CHARSET_PRINTABLE	CHARSET_ALPHANUMERIC CHARSET_SYMBOLS
+
 #define DEFAULT_CHARACTER_COUNT 16
 #define DEFAULT_PASSWORD_COUNT 4
 
