@@ -10,9 +10,17 @@ static int
 config_check_directory_wrapper(char **av)
 {
 	char *dirname = av[2];
-
 	config_check_directory(dirname);
+	return EXIT_SUCCESS;
+}
 
+
+static int
+config_resolve_character_set_wrapper(char **av)
+{
+	char *value = av[2];
+	wchar_t *output = config_resolve_character_set(value);
+	printf("%ls\n", output);
 	return EXIT_SUCCESS;
 }
 
@@ -24,6 +32,8 @@ main(int ac, char **av)
 
 	if (strcmp(av[1], "config_check_directory") == 0) {
 		return config_check_directory_wrapper(av);
+	} else if (strcmp(av[1], "config_resolve_character_set") == 0) {
+		return config_resolve_character_set_wrapper(av);
 	} else {
 		return EXIT_FAILURE;
 	}
