@@ -2,6 +2,7 @@
 
 	* Passwords can now use character sets containing unicode.
 	* Fix a bug where mdp would not detect a wrong directory permission.
+	* Add aliases to common character_sets (e.g. $ALPHANUMERIC, $DIGITS).
 
 0.6.0 Bertrand Janin <b@janin.com> (2014-01-10)
 
